closed one issue

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -108,6 +108,24 @@
 
 
   <img src= "img/campus.jpg" alt="BMSU Campus"/> <!-- 1. added a picture-->
+  
+  	<div class=" member">
+	<table>
+	<tr>
+		<th><h4 style="font-size: 18px; font-variant: small-caps; color:black; text-align: center;"><b> Team Member Log in</b></h4></th></tr>
+		<tr><td>
+	<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-secondary">Log In</button>
+</form></td></tr></table>
+</div><br>
 
 <
 <footer>
