--- a/public_html/information.html
+++ b/public_html/information.html
@@ -29,7 +29,6 @@
          to get that theme:
          https://www.bootstrapcdn.com/bootswatch/
     -->
-
 </head>
 
 
@@ -121,6 +120,26 @@
     </div>
   </div>
 </body> 
+
+<h2> Want more informaton? Sign up down below to receive scores, news and updates via email and text!</h2>
+<p> GO MOUNTAIN GOATS </p>
+	<div class="member">
+	<table>
+	<tr>
+		<th><h4 style="font-size: 18px; font-variant: small-caps; color:black; text-align: center;"><b>Member Log in</b></h4></th></tr>
+		<tr><td>
+	<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Phone Number</label>
+    <input type="password" class="form-control" id="exampleInputNumber1" placeholder="Phone Number">
+  </div>
+  <button type="submit" class="btn btn-secondary">Sign Up</button>
+</form></td></tr></table>
+</div><br>
   
 <footer>
   
