--- a/public_html/information.html
+++ b/public_html/information.html
@@ -89,11 +89,6 @@
 
 <body>
 
-
-
-
-<img src="img/bmsu_team.jpg" alt="BMSU roster"/>
-
 <div class="container">
     <h1>History of Blue Mountain State</h1>
 
@@ -118,6 +113,14 @@
     <div class="mycolor col-12 col-md-6">
     <b><p> Track and Field</p></b>
     The Track and Field team for BMSU has also had multiple conference trophies. They have had at least one member from the team go on to compete in Nationals every year.They are on a winning conference streak of 4 wins and they plan to get their 5th trophy this year. 
+    </div>
+
+    <div class="mycolor col-12 col-md-6">
+    </div>
+
+    <div class="mycolor col-12 col-md-6">
+    <img src="img/bmsu_team.jpg" class="rounded mx-auto d-block" alt="BMSU roster"/>
+    <p> </p>
     </div>
   </div>
 </body> 
