--- a/public_html/schedule.html
+++ b/public_html/schedule.html
@@ -45,7 +45,7 @@
     https://getbootstrap.com/docs/4.0/components/navbar/
     --->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="#">Blue Mountain State University Basketball</a>
+      <a class="navbar-brand" href="index.html">Blue Mountain State University Basketball</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -53,9 +53,6 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
 
           <li class="nav-item">
             <a class="nav-link" href="schedule.html">Schedule</a>
@@ -100,6 +97,7 @@
   <li>Dec 13 @ Panorama College</li>
 </ul>
 
+<img src="img/bball_player.jpg"class="rounded float-right" alt="BMSU Player"/>
 
 </body>
 
