--- a/public_html/information.html
+++ b/public_html/information.html
@@ -47,7 +47,7 @@
 <!-- For more info about the navbar, see:
     https://getbootstrap.com/docs/4.0/components/navbar/
     --->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">      <a class="navbar-brand" href="#">Blue Mountain State University Basketball</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">      <a class="navbar-brand" href="index.html">Blue Mountain State University Basketball</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -55,9 +55,6 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
 
           <li class="nav-item">
             <a class="nav-link" href="schedule.html">Schedule</a>
