grayson_groepper_changes

--- a/public_html/information.html
+++ b/public_html/information.html
@@ -5,8 +5,8 @@
 <head>
   <style>
     .row {
-      border-style: solid;
-    }
+      border-style: dotted;
+      border-color: blue;
   </style>
 
   <meta charset="utf-8">
