--- a/public_html/schedule.html
+++ b/public_html/schedule.html
@@ -104,9 +104,7 @@
 </body>
 
 <footer>
-
-  © Copyright 2019, Blue Mountain State University
-
+ &copy Copyright 2019, Blue Mountain State University
 </footer>
 </body>
 </html>
