--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,13 +3,7 @@
 <html lang="en">
 
 <head>
-  <style>
-    nav li a.active {
-      background-color: white;
-
-    }
-  </style>
-
+  
   <meta charset="utf-8">
 
   <title>"Blue Mountain State University Basketball"</title>
@@ -32,15 +26,22 @@
          to get that theme:
          https://www.bootstrapcdn.com/bootswatch/
     -->
-
+<title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <style>
+    .carousel-inner > .item > img,
+    .carousel-inner > .item > a > img {
+     width: 100%;
+     margin: fill;
+  }
+  </style>
 </head>
 
-
-
-
-
 <body>
-
 
 
 
@@ -87,12 +88,60 @@
 
       </div>
     </nav>
+<div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+
+      <div class="item active">
+        <img src="img/campus.jpg" alt="Campus" width="300" height="300">
+        <div class="carousel-caption">
+          <h3>BMSU Campus</h3>
+          <p>Home of The Mountain Goats</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="img/hallway.jpg" alt="Hallway" width="300" height="300">
+        <div class="carousel-caption">
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="img/building.jpg" alt="building" width="300" height="300">
+        <div class="carousel-caption">
+        </div>
+      </div>
+  
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+
+    </a>
+  </div>
+</div>
 
 </head>
 
 
 
-
+<!--PICTURE SCROLLING-->
 <body>
   <div class="alert alert-info" role="alert">
   You are on BMSU's basketball info pages! For more information about the school please click Learn more!
@@ -105,11 +154,11 @@
     <p>Come learn from one of the top schools in the state!</p>
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </div>
+  
 
 
-  <img src= "img/campus.jpg" alt="BMSU Campus"/> <!-- 1. added a picture-->
 
-<
+
 <footer>
 
   © Copyright 2019, Blue Mountain State University
