--- a/public_html/all_time_players.html
+++ b/public_html/all_time_players.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -21,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Main CSS styles for Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cerulean/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
     <!-- Optional theme add-on -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cerulean/bootstrap.min.css">
@@ -36,19 +34,7 @@
     -->
 
 </head>
-
-
-
-
-
 <body>
-
-  
-
-
-
-
-
 <!-- For more info about the navbar, see:
     https://getbootstrap.com/docs/4.0/components/navbar/
     --->
@@ -85,8 +71,6 @@
             <a class="nav-link" href="information.html"> BMSU Information</a>
           </li>
 
-
-          </li>
         </ul>
 
       </div>
@@ -115,6 +99,7 @@
       <th>Power Foward</th>
 
       <th>Center</th>
+      <th>Point Guard</th>
 
      </tr>
 
@@ -133,6 +118,7 @@
       <td>Steve Roberts</td>
 
       <td>Noah Jackson</td>
+      <td>Moses Saban</td>
 
      </tr>
 
@@ -151,6 +137,8 @@
         <td>1983</td>
 
         <td>1999</td>
+        
+        <td>2012</td>
 
        </tr>
 
