--- a/public_html/schedule.html
+++ b/public_html/schedule.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 
-
 <html lang="en">
-
-
 
 <head>
   
-
   <meta charset="utf-8">
 
-  
   <title>2019-2020 Men's Basketball Game Dates</title>
  <!-- This says our CSS is compatible with phones, and phones
          don't need to scale it strangely. -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Main CSS styles for Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cerulean/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
     <!-- Optional theme add-on -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cerulean/bootstrap.min.css">
@@ -31,16 +26,10 @@
          https://www.bootstrapcdn.com/bootswatch/
     -->
 
-
 </head>
-
-
-
-
 
 <body>
 
-  
 <!-- For more info about the navbar, see:
     https://getbootstrap.com/docs/4.0/components/navbar/
     --->
@@ -76,16 +65,11 @@
           <li class="nav-item">
             <a class="nav-link" href="information.html"> BMSU Information</a>
           </li>
-
-
-          </li>
         </ul>
 
       </div>
     </nav>
 
-
-<body>
   <h1>2019-20 BMSU Basketball Schedule</h1>
 <ul>
   <li>Nov 5 @ Eastside University</li>
@@ -100,12 +84,9 @@
   <li>Dec 13 @ Panorama College</li>
 </ul>
 
-
-</body>
-
 <footer>
 
-  © Copyright 2019, Blue Mountain State University
+ &copy; Copyright 2019, Blue Mountain State University
 
 </footer>
 </body>
