--- a/public_html/information.html
+++ b/public_html/information.html
@@ -111,12 +111,12 @@
 
     <div class="col-12 col-md-6">
     <b><p>Virginia Intercolegiate Athletic Conference</p></b>
-    Blue Mountain State University competes in the West Virginia Intercollegiate Athletic Conference where they have acheived multiple conference titles as well as a handful of National Champioships. The basketball team is coming of a record season winning the conference as well as advancing all the way until the Final Four. The football team has won 3 of the last four National Championships  and are looking for the three-peat this season. The womens teams have been succesful as well. Volleyball and basketball have not had a losing season since 2003 and are continuing to get better each year.
+    Blue Mountain State University competes in the West Virginia Intercollegiate Athletic Conference where they have acheived multiple conference titles as well as a handful of National Championships. The basketball team is coming of a record season winning the conference as well as advancing all the way until the Final Four. The football team has won 3 of the last four National Championships  and are looking for the three-peat this season. The women's teams have been successful as well. Volleyball and basketball have not had a losing season since 2003 and are continuing to get better each year.
     </div>
 
     <div class="mycolor col-12 col-md-6">
     <b><p> Track and Field</p></b>
-    The Track and Field team for BMSU has also had multiple conference trophies. They have had at least one member from the team go on to compete in Nationals every year.They are on a winning conference streak of 4 wins and they plan to get their 5th trophy this year. 
+    The Track and Field team for BMSU has also had multiple conference trophies. They have had at least one member from the team go on to compete in Nationals every year.  They are on a winning conference streak of 4 wins and they plan to get their 5th trophy this year. 
     </div>
   </div>
 </body> 
@@ -126,7 +126,7 @@
 	<div class="member">
 	<table>
 	<tr>
-		<th><h4 style="font-size: 18px; font-variant: small-caps; color:black; text-align: center;"><b>Member Log in</b></h4></th></tr>
+		<th><h4 style="font-size: 18px; font-variant: small-caps; color:black; text-align: center;"><b>Sign Up</b></h4></th></tr>
 		<tr><td>
 	<form>
   <div class="form-group">
